--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ir Ciudades"/>
-
-
-
-
+    <Button
+        android:id="@+id/btnBarrios"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ir Barrios"/>
+    <Button
+        android:id="@+id/btnDatos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ir Datos"/>
 </LinearLayout>
