lista ciudades implementada

--- a/app/src/main/res/layout/activity_ciudades_datos.xml
+++ b/app/src/main/res/layout/activity_ciudades_datos.xml
@@ -10,15 +10,10 @@
     android:layout_gravity="center"
     android:gravity="center"
     >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Vista Datos"
-        />
 
-    <ListView
-        android:id="@+id/verDatos"
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listaCiudadesRecycle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
